--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@emailjs/browser": "^4.3.1",
         "@next/third-parties": "^14.1.3",
+        "@tailwindcss/postcss": "^4.2.1",
         "axios": "^1.6.8",
         "lottie-react": "^2.4.0",
         "next": "^14.1.3",
@@ -20,12 +21,13 @@
         "react-fast-marquee": "^1.6.2",
         "react-google-recaptcha": "^3.1.0",
         "react-icons": "^4.11.0",
-        "react-toastify": "^10.0.4"
+        "react-toastify": "^10.0.4",
+        "sharp": "^0.34.5"
     },
     "devDependencies": {
         "autoprefixer": "latest",
-        "eslint": "latest",
-        "eslint-config-next": "latest",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "^14.2.3",
         "postcss": "latest",
         "sass": "^1.69.5",
         "tailwindcss": "latest"
